--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "babel-preset-react": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.3.2",
-    "webpack-config-helper": "^2.0.16"
+    "webpack-config-helper": "^2.0.16",
+    "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
-    "build": "rm -rf build && webpack --progress -p"
+    "build": "rm -rf build && webpack --progress -p",
+    "start": "rm -rf build && webpack-dev-server --contentBase build --host localhost --port 3000"
   }
 }
