--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
     "webpack-config-helper": "^2.0.16",
     "webpack-dev-server": "^2.4.2"
